<resources>
    <string name="app_name">PhotoAlbum</string>
    <string name="close_button">Close</string>
    <string name="add_new_album">Add New Album</string>
    <string name="enternewalbumname">Enter New Album Name</string>
    <string name="X">X</string>
    <string name="ok">OK</string>
    <string name="type_here">Type here</string>
    <string name="search">Search</string>
    <string name="slidshow">Slideshow</string>
    <string name="add_image">Add</string>
    <string name="edit_tag">Edit</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="person">Person</string>
    <string name="location">Location</string>
    <string name="move">Move</string>
    <string name="edit">Edit/Delete</string>
    <string name="album_name">Album Name</string>
    <string name="chose_file">Choose Images</string>
    <string name="empty_album">Create Empty</string>
    <string name="AND">AND</string>
    <string name="OR">OR</string>
    <string name="yep">Searching For Two:</string>
</resources>