<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="359dp"
        android:layout_height="210dp"
        android:background="#EBE5EF"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519"
        tools:ignore="NotSibling">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="206dp"
            android:layout_height="0dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="126dp"
            android:layout_marginBottom="170dp"
            android:text="@string/add_new_album"
            android:textAlignment="center"
            android:textColor="#CF8A74"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/album_to_be_added"
            android:layout_width="217dp"
            android:layout_height="57dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="77dp"
            android:layout_marginEnd="118dp"
            android:layout_marginBottom="76dp"
            android:hint="@string/type_here"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="191dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="137dp"
            android:text="@string/enternewalbumname"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/close_button"
            android:layout_width="61dp"
            android:layout_height="51dp"
            android:layout_marginStart="294dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="159dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/X"
            app:cornerRadius="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintBounds" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="149dp"
            android:layout_height="48dp"
            android:layout_marginStart="194dp"
            android:layout_marginTop="154dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/chose_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/empty_album_button"
            android:layout_width="143dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/empty_album"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>