<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar4"
        android:layout_width="382dp"
        android:layout_height="52dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="587dp"
        android:background="#6D6875"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_image_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="237dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="441dp"
        android:backgroundTint="@color/button_color"
        android:text="Delete Photo"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="223dp"
        android:layout_height="175dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="379dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/muskcateer" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="320dp"
        android:text="@string/person"
        android:textColor="#391E22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="314dp"
        android:layout_marginBottom="251dp"
        android:text="@string/location"
        android:textColor="#391E22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/apply_changes_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="426dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="166dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/ok"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/person_tag_input"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="305dp"
        android:background="#E6D1D8"
        android:backgroundTint="#E6D1D8"
        android:ems="10"
        android:inputType="text"
        android:text="@string/type_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/location_tag_input"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="237dp"
        android:background="#E6D1D8"
        android:backgroundTint="#E6D1D8"
        android:ems="10"
        android:inputType="text"
        android:text="@string/type_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="382dp"
        android:layout_height="28dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="554dp"
        android:text="@string/edit_tag"
        android:textAlignment="center"
        android:textColor="#7e9680"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_person"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:layout_marginStart="310dp"
        android:layout_marginTop="285dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="304dp"
        android:backgroundTint="@color/button_color"
        android:paddingHorizontal="0dp"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_location"
        android:layout_width="64dp"
        android:layout_height="51dp"
        android:layout_marginStart="310dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="237dp"
        android:backgroundTint="@color/button_color"
        android:paddingHorizontal="0dp"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/xx"
        android:layout_width="59dp"
        android:layout_height="45dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="554dp"
        android:backgroundTint="@color/button_color"
        android:text="X"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>