<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar6"
        android:layout_width="382dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="572dp"
        android:background="#6d6875"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="382dp"
        android:layout_height="30dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="542dp"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="#7e9680"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="128dp"
        android:layout_height="44dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="255dp"
        android:layout_marginBottom="496dp"
        android:text="Enter person tag to search by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/person_search_input"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="492dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/type_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="125dp"
        android:layout_height="44dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="258dp"
        android:layout_marginBottom="440dp"
        android:text="Enter location tag to search by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/location_search_input"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="437dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/type_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioButton
        android:id="@+id/conjunction_radio"
        android:layout_width="172dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="399dp"
        android:text="conjunction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ListView
        android:layout_width="380dp"
        android:layout_height="394dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/apply_search_button"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="395dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>